--- a/index.html
+++ b/index.html
@@ -3,23 +3,68 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Peter Michaels Allen, @3fn | Product, User Experience Designer</title>
 		
 		<meta name="description" content="Peter Michaels Allen is a Product and User Experience Designer working in the San Francisco Bay Area.">
 		
+		<!-- Bootstrap Start-->
+		<link href="bootstrap/css/bootstrap.css" rel="stylesheet">
+		<!--[if lt IE 9]>
+			<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+			<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+		<![endif]-->
+		<!-- Bootstrap End-->
 	</head>
 	<body>
-		<header>
-		</header>
+		<nav role="navigation" class="navbar navbar-default navbar-fixed-top">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <button type="button" data-target="#navbarCollapse" data-toggle="collapse" class="navbar-toggle">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a href="#" class="navbar-brand">3fn</a>
+        </div>
+        <div id="navbarCollapse" class="collapse navbar-collapse">
+            <ul class="nav navbar-nav navbar-right">
+	            <li class="active"><a href="#home">Home</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
 		
-		<main>
-			<h1>Hello, world!</h1>
-			<h2>Peter will be here soon!</h2>
+		<main class="container">
+			<div class="row">
+				<div class="col-md-5 col-sm-5 col-xs-12">
+					<h2>Hi, I'm Peter!</h2>
+					<p>3 First Names Design is the doppelgänger for my work as a Product & User Experience Designer.</p>
+					<p>I’m currently looking to join a team who want to take on big challenges.</p>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-5 col-sm-5 col-xs-12">
+					<p>Some people call designers like me a “hybrid designer”, and I’ve never been a fan of that label.</p>
+					<p>We’re designers who have experience in UX, UI, and Visual Design, and we might even sprinkle in a little code too - which I do. That was never the goal when I started my career in Design; these were skills and experiences born out of necessity.</p>
+					<p>No front-end support? Okay, I’ll learn CSS. No data or research on who we’re designing for? Fine, I’ll call some people who might be interested in this product.</p>
+					<p>If you’re hungry and diligent about stacking days-on-top-of-days, you discover you can improvise, adapt, and overcome any design challenge thrown your way. I’ve built my career on that foundation, and it’s served me well as I’ve navigated a range of products and work environments. From eCommerce to video games; from small start-ups to Fortune 500 companies.</p>
+					<p>To me, that’s what makes a Product Designer: someone who can see the entire chess board of a project’s design and contributing elements. I’m someone you can hand-off a vague goal, work independently and collaboratively within a team, and to come out the other end with a solution.</p>
+					<p>Let’s blaze some trails!</p>
+				</div>
+			</div>
 		</main>
 		
 		<footer>
 		</footer>
-	
+		
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+		<!-- Include all compiled plugins (below), or include individual files as needed -->
+		<script src="bootstrap/js/bootstrap.min.js"></script>
 	</body>
 </html>
